--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <h3>提交入口</h3>
                 <p>请拍照或扫描答案，提交至问卷星或邮箱</p>
                 <p>邮箱地址：mirturlol@163.com</p>
-                <p>问卷星<a href="https://www.wjx.cn/vm/rXeY1rh.aspx">链接</a></p>
+                <p>问卷星<a href="https://www.wjx.cn/vm/rXeY1rh.aspx" target="_blank">链接</a></p>
                 <p>问卷星二维码</p>
                 <img src="wjx-qr.jpg" alt="问卷星二维码" width="200">
             </div>
