--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
         text-align: justify;
         text-justify: inter-word;
     }
+    summary{
+        color:#48a7a3;
+    }
     #lead{
         background-color:#e3f5f2;
         margin:auto;
@@ -111,7 +114,10 @@
         border-radius:20px;
         text-align:center;
     }
-
+    #hints-content img{
+        width:80vw;
+        max-width:800px;
+    }
 
     @media(min-width:768px){
         #questions-content{
@@ -184,7 +190,7 @@
             <div>
                 <h3>试卷</h3>
                 <p>推荐用时：5小时</p>
-                <p><em>请仔细阅读比赛规则</em></p>
+                <p><em>请仔细阅读比赛规则与提示</em></p>
                 <p><a href="第一届MOL试题.pdf" target="_blank">PDF链接</a></p>
                 <p>试题</p>
                 <ol>
@@ -204,14 +210,24 @@
                 <img src="wjx-qr.jpg" alt="问卷星二维码" width="200">
             </div>
         </div>
-        <h3>比赛规则</h3>
-            <div id="rules-content">
-                <p>一、我们鼓励<strong>独立完成</strong>MOL，也欢迎您与同学或朋友进行<strong>适度讨论</strong>，但<strong>不鼓励您上网搜索、查询资料、直接交流答案</strong>。题干中提供的信息足以推出所有答案，无需参考外部资料。</p>
-                <p>二、每道题目的答案请尽量在一张<strong>单面A4空白打印纸</strong>上书写，字迹尽量清晰工整。如果您直接在电子文档中进行书写，也请尽量书写清晰。如果条件不允许，也可以使用一张单面的其他类型纸张。如果有一张纸实在书写不下的题目，邮件和问卷中都允许额外上传一个附件，请谨慎使用。</p>
-                <p>三、若题目要求书写规则，规则的书写方式请参考<a href="rules-guideline.html" target="_blank">规则书写</a>。</p>
-                <p>四、MOL官方将以客观、公正、公开的标准进行评卷，并公示结果。MOL官方有权对判定雷同的答卷不予评分。</p>
-                <p><strong>祝您好运！</strong></p>
-            </div>
+        <h2>比赛规则</h2>
+        <div id="rules-content">
+            <p>一、我们鼓励<strong>独立完成</strong>MOL，也欢迎您与同学或朋友进行<strong>适度讨论</strong>，但<strong>不鼓励您上网搜索、查询资料、直接交流答案</strong>。题干中提供的信息足以推出所有答案，无需参考外部资料。</p>
+            <p>二、每道题目的答案请尽量在一张<strong>单面A4空白打印纸</strong>上书写，字迹尽量清晰工整。如果您直接在电子文档中进行书写，也请尽量书写清晰。如果条件不允许，也可以使用一张单面的其他类型纸张。如果有一张纸实在书写不下的题目，邮件和问卷中都允许额外上传一个附件，请谨慎使用。</p>
+            <p>三、若题目要求书写规则，规则的书写方式请参考<a href="rules-guideline.html" target="_blank">规则书写</a>。</p>
+            <p>四、MOL官方将以客观、公正、公开的标准进行评卷，并公示结果。MOL官方有权对判定雷同的答卷不予评分。</p>
+            <p><strong>祝您好运！</strong></p>
+        </div>
+        <h2>实时提示</h2>
+        <div id="hints-content">
+            <h3>1/29 09:08 印地语</h3>
+            <p>出题人xhy给出了额外的重要指示，对于没有学过有机化学的同学强烈建议查看，对于已经学过化学的参赛者也可查看，避免不同教育体系间对于定义理解的不同：</p>
+            <details>
+                <summary>查看提示</summary>
+                <img src="./hints/hindi-1.png">
+                <img src="./hints/hindi-2.png">
+            </details>
+        </div>
         <h2>关于我们</h2>
         <div id="about-content">
             <div>
