--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
         </div>
         <h2>勘误/提示</h2>
         <div id="hints-content">
+            <h3>【提示】1/30 20:36 声律启蒙</h3>
+            <p>本题解答仅需现代汉语（普通话）的知识，汉字的读音以普通话拼音为准，一切其他音韵学知识皆不必要，也不影响解答。</p>
+            <h3>【提示】1/30 20:36 天诺语</h3>
+            <p>本题解答仅需现代美式英语的知识，一切其他音系学知识皆不必要，也不影响解答。</p>
+            <h3>【阐明】1/30 20:36 凯特语</h3>
+            <p>本体需要写明在语料中发现的规则。</p>
             <h3>【勘误】1/29 16:18 印地语</h3>
             <p>第(15)问中，各化学物质的系数应为2-5-<strong>2</strong>-4，而不是2-5-1-4</p>
             <h3>【提示】1/29 09:08 印地语</h3>
@@ -233,12 +239,12 @@
         <h2>关于我们</h2>
         <div id="about-content">
             <div>
-                <h3>什么是MOL半咸水语言学公开赛？</h3>
+                <h3>MOL是什么？</h3>
                 <p><strong>MOL(Mirturl Linguistics Open)</strong>是由2023年国际语言学奥林匹克竞赛中国国家队自主组织的<strong>语言学公开挑战赛</strong>。本比赛采取<strong>线上进行</strong>的形式，不设任何年龄或年级限制，不收取任何报名费用，<strong>无任何参赛门槛</strong>，旨在向社会推广语言学这一多元多彩的学科。
                 </p>
             </div>
             <div>
-                <h3>为什么要叫“半咸水”语言公开赛？</h3>
+                <h3>“半咸水”是什么？</h3>
                 <p>“半咸水”是出现在<strong>IOL2023团队题</strong>“Murrinh-Patha语”中的一个词，在该语言中为<strong>"Mirturl"</strong>，给队员们留下了深刻的印象。“半咸水”还象征着我们来自的土地：<strong>长江下游入海口</strong>，淡水与咸水交汇之地。这个词汇就像妙趣横生的语言一样，传递着一群人的历史与文化，表达着一群人的思想与生命。 </p>
             </div>
             <div>
