--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
         </div>
         <h2>勘误/提示</h2>
         <div id="hints-content">
+            <h3>【勘误】2/4 02:44 凯特语</h3>
+            <p>第(12)问题干有所改动，详见pdf。</p>
             <h3>【提示】1/30 20:36 声律启蒙</h3>
             <p>本题解答仅需现代汉语（普通话）的知识，汉字的读音以普通话拼音为准，一切其他音韵学知识皆不必要，也不影响解答。</p>
             <h3>【提示】1/30 20:36 天诺语</h3>
