--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         max-width:800px;
     }
     #results-table{
-        width:90vw;
+        width:85vw;
         max-width:700px;
         border-spacing:0;
         border:#48a7a3 2px solid;
@@ -231,7 +231,7 @@
         <h2>比赛结果</h2>
         <div id="results-content">
             <p>第一届MOL获得了超150次关注，其中32名选手正式参与了比赛并提交了答卷，均分61.03分。</p>
-            <p>详细分值情况我们将通过邮件返还给每一位选手。奖金也将通过邮件联系选手添加 @紫顶鹤 的微信进行发放（四个最佳解题每道10元，总分二至五名每人10元，总分第一名20元）。
+            <p>详细分值情况我们已通过邮件返还给每一位选手。奖金也通过邮件联系选手添加 @紫顶鹤 的微信进行发放。
             </p>
             <p>恭喜获奖的选手！</p>
             <h3>总分排名</h3>
@@ -283,6 +283,17 @@
                 </tr>
             </table>
             <p><strong><em>*本题不设置最佳解题奖</em></strong></p>
+
+            <h3>奖项设置</h3>
+            <p>MOL收到了两笔匿名捐款，共计370元，非常感谢二位对于MOL的赞助！</p>
+            <p>其中，360元作为奖金发放给表现优异的选手，以资鼓励，奖金细则与颁发情况如下：</p>
+            <ol>
+                <li><strong>最佳解题奖</strong>20元，除第二题外每题颁发一份（具体见上），共颁发4份。</li>
+                <li><strong>优秀解题奖</strong>10元，用来奖励所有未获得最佳解题奖的满分答案，共颁发19份。</li>
+                <li><strong>第二名至第五名</strong>每人10元。</li>
+                <li><strong>第一名</strong>30元。</li>
+            </ol>
+            <p>MOL将用捐款剩余的10元以及紫顶鹤B站收益的56元，在微信交流群中发放66元的红包，敬请期待！</p>
         </div>
         <h2>答案解析</h2>
         <div id="solution-content">
@@ -343,8 +354,8 @@
         <h2>MOL如何举办？ </h2>
         <div id="contest-content">
             <div>
-                <p>第一届MOL暂定于<strong>1月29日至2月4日</strong>举办。题目<strong>以PDF格式公布于此站上</strong>。尽管我们的题目<strong>推荐用时</strong>与IOLC相同，大约在5个小时左右，但<strong>所有提交入口均会开启一周</strong>，以给予选手充分的时间完成比赛。</p>
-                <p>提交截止一段时间后，MOL官方会将批改完毕的卷子<strong>以邮箱的方式发给各位选手</strong>，并在官网上<strong>公布答案及解析</strong>。成绩靠前的选手的分数也将会在官网上公布。 </p>
+                <p>第一届MOL已于<strong>1月29日至2月4日</strong>举办。题目<strong>以PDF格式公布于此站上</strong>。尽管我们的题目<strong>推荐用时</strong>与IOLC相同，大约在5个小时左右，但<strong>提交入口开启了一周</strong>，以给予选手充分的时间完成比赛。</p>
+                <p>比赛后，MOL官方将批改完毕的卷子<strong>以邮箱的方式发给了各位选手</strong>，并在官网上<strong>公布了答案及解析</strong>。成绩靠前的选手的分数也在官网上公布。 </p>
             </div>
             <div id="qr-code" class="horizontally-center">
                 <figure>
