--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             <ol>
                 <li>声律启蒙：<a href="best-solution/1.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1tK421y73Y">讲解视频</a></li>
                 <li>天诺语</li>
-                <li>凯特语：<a href="best-solution/3.jpg" target="_blank">最佳解</a></li>
+                <li>凯特语：<a href="best-solution/3.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1g2421A7TF">讲解视频</a></li>
                 <li>印地语：<a href="best-solution/4.jpg" target="_blank">最佳解</a></li>
                 <li>穆鲁伊维托托语：<a href="best-solution/5.jpg" target="_blank">最佳解</a></li>
             </ol>
