--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                 <li>声律启蒙：<a href="best-solution/1.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1tK421y73Y">讲解视频</a></li>
                 <li>天诺语： <a href="https://www.bilibili.com/video/BV1zv421k7S2">讲解视频</a></li>
                 <li>凯特语：<a href="best-solution/3.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1g2421A7TF">讲解视频</a></li>
-                <li>印地语：<a href="best-solution/4.jpg" target="_blank">最佳解</a></li>
-                <li>穆鲁伊维托托语：<a href="best-solution/5.jpg" target="_blank">最佳解</a></li>
+                <li>印地语：<a href="best-solution/4.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV18m41117s7">讲解视频</a></li>
+                <li>穆鲁伊维托托语：<a href="best-solution/5.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1A1421X7Bm">讲解视频</a></li>
             </ol>
             <p><strong><em>*讲解视频将逐个更新，敬请期待</em></strong></p>
         </div>
