--- a/mol1/index.html
+++ b/mol1/index.html
@@ -327,7 +327,7 @@
         <div id="rules-content">
             <p>一、我们鼓励<strong>独立完成</strong>MOL，也欢迎您与同学或朋友进行<strong>适度讨论</strong>，但<strong>不鼓励您上网搜索、查询资料、直接交流答案</strong>。题干中提供的信息足以推出所有答案，无需参考外部资料。</p>
             <p>二、每道题目的答案请尽量在一张<strong>单面A4空白打印纸</strong>上书写，字迹尽量清晰工整。如果您直接在电子文档中进行书写，也请尽量书写清晰。如果条件不允许，也可以使用一张单面的其他类型纸张。如果有一张纸实在书写不下的题目，邮件和问卷中都允许额外上传一个附件，请谨慎使用。</p>
-            <p>三、若题目要求书写规则，规则的书写方式请参考<a href="rules-guideline.html" target="_blank">规则书写</a>。</p>
+            <p>三、若题目要求书写规则，规则的书写方式请参考<a href="../rules-guideline.html" target="_blank">规则书写</a>。</p>
             <p>四、MOL官方将以客观、公正、公开的标准进行评卷，并公示结果。MOL官方有权对判定雷同的答卷不予评分。</p>
             <p><strong>祝您好运！</strong></p>
         </div>
@@ -359,11 +359,11 @@
             </div>
             <div id="qr-code" class="horizontally-center">
                 <figure>
-                    <img src="group-qr.jpg" alt="Wechat Group QR Code" width="200">
+                    <img src="../group-qr.jpg" alt="Wechat Group QR Code" width="200">
                     <figcaption>微信交流群</figcaption>
                 </figure>
                 <figure>
-                    <img src="account-qr.png" alt="Subscription Account" width="200">
+                    <img src="../account-qr.png" alt="Subscription Account" width="200">
                     <figcaption>微信公众号</figcaption>
                 </figure>
             </div>
