--- a/mol2/index.html
+++ b/mol2/index.html
@@ -349,7 +349,7 @@
             <div>
                 <p>第二届MOL预计于2024年<strong>7月8日至14日</strong>在线上举行。届时，本网站将会以<strong>pdf格式公布题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，个人赛大约在6个小时左右，团队赛大约在4个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
                 <p>提交截止一段时间后，MOL官方会将批改完毕的卷子<strong>以邮箱的方式</strong>发给各位选手，并在官网上公布<strong>答案及解析</strong>。成绩靠前的选手的分数也将会在官网上公布。我们将颁发个人赛、团队赛与总分三种奖项，并发布激励性质的奖金。</p>
->            </div>
+            </div>
             <div id="qr-code" class="horizontally-center">
                 <figure>
                     <img src="../group-qr.jpg" alt="Wechat Group QR Code" width="200">
