--- a/mol1/index.html
+++ b/mol1/index.html
@@ -290,10 +290,10 @@
             <ol>
                 <li><strong>最佳解题奖</strong>20元，除第二题外每题颁发一份（具体见上），共颁发4份。</li>
                 <li><strong>优秀解题奖</strong>10元，用来奖励所有未获得最佳解题奖的满分答案，共颁发19份。</li>
-                <li><strong>第二名至第五名</strong>每人10元。</li>
+                <li><strong>第二名至第五名</strong>每人15元。</li>
                 <li><strong>第一名</strong>30元。</li>
             </ol>
-            <p>MOL将用捐款剩余的10元以及紫顶鹤B站收益的56元，在微信交流群中发放66元的红包，敬请期待！</p>
+            <p>另外，MOL已用捐款剩余的10元以及紫顶鹤B站收益的56元，在微信交流群中发放了66元的红包，鼓励更多人参入到半咸水的交流当中！</p>
         </div>
         <h2>答案解析</h2>
         <div id="solution-content">
@@ -305,7 +305,7 @@
                 <li>印地语：<a href="best-solution/4.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV18m41117s7">讲解视频</a></li>
                 <li>穆鲁伊维托托语：<a href="best-solution/5.jpg" target="_blank">最佳解</a>·<a href="https://www.bilibili.com/video/BV1A1421X7Bm">讲解视频</a></li>
             </ol>
-            <p><strong><em>*讲解视频将逐个更新，敬请期待</em></strong></p>
+            <p><strong><em>*讲解视频已更新完毕，欢迎前往B站观看交流！</em></strong></p>
         </div>
         <h2>关于我们</h2>
         <div id="about-content">
