--- a/rules-guideline.html
+++ b/rules-guideline.html
@@ -80,7 +80,7 @@
 </head>
 <body>
     <nav>
-        <img src="logo.png" alt="MOL Logo" width="50">
+        <img src="mol1/logo.png" alt="MOL Logo" width="50">
         <p>MOL半咸水语言学公开赛</p>
     </nav>
     <main>
@@ -99,18 +99,20 @@
         <li>写出音变规则（同上）
         <li>特别注意音变规则之间的顺序，确保排列正确
         <li>如果音变与词义有关，分类讨论
+	<li>形态题的规则与音系题类似
         </ol>
 
         <h2>数字题</h2>
         <ol>
         <li>写出进制
         <li>将两种语言中的数字一一对应
+	<li>如有复合进制、提前进位、延迟进位等特殊标识也需写出
         <li>写出音变规则（同上）
         </ol>
         <h2>书写系统题</h2>
         <ol>
         <li>写出基本符号代表的音（如元音附标文字，就要将辅音字母和元音附标分开列出）
-        <li>写出特殊规则（如音变等）
+        <li>写出特殊规则（如音变等；特殊情况下可能有符号兼具表意功能，也需写出）
         </ol>
         <h2>其他类型</h2>
         <p>结合以上四种，将你能想到的规则都写出即可</p>
