--- a/mol2/index.html
+++ b/mol2/index.html
@@ -245,7 +245,7 @@
         <h2>第二届MOL有消息了吗？</h2>
         <div id="announcement">
             <p><em><a href="#about-title">这是哪里？MOL是<span class="strike">物质的量的单位还是载人轨道实验室还是商船三井公司？</span></a></em></p>
-            <p><a href="../mol1/index.html">第一届MOL</a></p>
+            <p><a href="../mol1/index.html">回顾：第一届MOL</a></p>
             <p>我们终于要宣布一个激动人心的消息：<strong>第二届半咸水语言学公开赛（MOL2）</strong>即将于今年<strong>七月初</strong>举办！无论您是否了解语言学或语奥，是否参与了今年寒假的第一届MOL，都可以自由了解并参与我们的比赛，在“半咸水”的文化海洋中尽情畅游。</p>
             <p>第二届半咸水语言学公开赛（MOL2）预计于<strong>2024年7月8日至14日</strong>在线上举行。具体安排、试卷发放方式、试卷提交方式、奖项设置、奖金发放等事项，将在后续的公众号文章与官网上同步更新。记得关注，一定不要错过哦！</p>
             <p>与第一届相同，第二届MOL依旧为期<strong>七天</strong>，给予选手们充分的时间完赛。另外，我们依旧保持着组委会完全由IOL中国国家队员组成的优良传统，严选题目质量，确保选手们在做题时有足够好的体验与足够丰富的收获。以及最重要地，第二届MOL依旧<strong>无需报名，无需缴费，无参赛门槛</strong>，并且会发放激励性质的<strong>奖状与奖金</strong>。除第一届MOL组委会的成员之外，又有一群<strong>新的小伙伴</strong>加入了我们！他们来自IOL2022和2024的国家队，在语奥试题的制作和评测上都秉有绝对的专业性与负责的态度，无疑令我们尚处于襁褓中的半咸水赛事增光添彩！大家也可以期待一波第二届MOL中他们中的一位或几位带来的题目哦！</p>
@@ -276,7 +276,7 @@
                 </details>
                 <details>
                     <summary>匹配组队</summary>
-                    <p>第二届MOL为大家提供了多种寻找队友的渠道。我们将在赛前一段时间在各大平台同步发布一张表格，您可以在该表格中填写您的参赛昵称、微信号、在线时间及其他相关个人信息（比如是否了解过语奥、自己擅长的分工，甚至MBTI……）来<span class="strike">相亲</span>吸引契合的队友。同时，您随时可以加入MOL微信群，在群中寻觅心仪的队友。（翻译：MOL为大家搭建了一个社交平台！但是想社交就社交，不想社交就开摆喵）</p>
+                    <p>第二届MOL为大家提供了多种寻找队友的渠道。我们在各大平台同步发布了一张<li><a href="https://docs.qq.com/sheet/DRUJ0YmJVQUJWR1RL?tab=BB08J2">表格</a></li>，您可以在该表格中填写您的参赛昵称、微信号、在线时间及其他相关个人信息（比如是否了解过语奥、自己擅长的分工，甚至MBTI……）来<span class="strike">相亲</span>吸引契合的队友。同时，您随时可以加入MOL微信群，在群中寻觅心仪的队友。（翻译：MOL为大家搭建了一个社交平台！但是想社交就社交，不想社交就开摆喵）</p>
                     <p>组队成功后，请在表格中修改自己的组队状态。对于开赛前还未组队的选手，我们将按3-4人一组进行分配。</p>
                     <p>填写组队表格并成功组队意味着您向您的队友们保证了自己会积极参赛，请努力坚持合作完赛哦！</p>
                 </details>
@@ -296,7 +296,7 @@
                 <ol>
                     <li>（自行/在组委会的协调下）组建自己的微信群或QQ群，确认队名和队员昵称等</li>
                     <li>有条件线下讨论最佳，没有条件则建议使用腾讯会议或Zoom等方式，协商好共同空闲的时间一同解题，极不建议仅每个人完成自己的工作而无团队的实时沟通</li>
-                    <li>灵活使用腾讯文档、金山文档、Google Drive等线上办公工具，且由于MOL可能会有七天的战线，需要注意保存以免信息丢失</li>
+                    <li>灵活使用腾讯文档、金山文档、飞书、Google Drive等线上办公工具，且由于MOL可能会有七天的战线，需要注意保存以免信息丢失</li>
                     <li>截止时间前再次确认队名和队员昵称等信息，并确保所有队员全部交卷</li>
                 </ol>
             </div>
@@ -332,7 +332,7 @@
             </div>
             <div>
                 <h3>MOL的题目从何而来？</h3>
-                <p>MOL的题目全部由IOL2023<strong>国家队员</strong>们<strong>自主命题</strong>，和IOLC等主流比赛的命题风格将不尽相同，力图更加<strong>有趣</strong>、更加<strong>新颖</strong>、更能传播弘扬语奥的<strong>独特文化</strong>。我们衷心希望能给参赛的各位选手带来更特别的参赛体验。 </p>
+                <p>MOL的题目全部由IOL<strong>国家队员</strong>们<strong>自主命题</strong>，和IOLC等主流比赛的命题风格将不尽相同，力图更加<strong>有趣</strong>、更加<strong>新颖</strong>、更能传播弘扬语奥的<strong>独特文化</strong>。我们衷心希望能给参赛的各位选手带来更特别的参赛体验。 </p>
             </div>
         </div>
         <h2>比赛规则</h2>
