--- a/logo_design.html
+++ b/logo_design.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>MOL半咸水语言学公开赛</title>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="mol1/logo.png">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -72,7 +72,7 @@
         width:100vw;
         height:70vh;
         min-height:500px;
-        background-image:url("./cover.jpg");
+        background-image:url("mol2/cover.jpg");
         background-repeat:no-repeat;
         background-size:auto 100vh;
         background-position:center;
@@ -236,8 +236,8 @@
     </nav>
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
-            <h1>欢迎来到MOL2！</h1>
-            <h3>距离比赛开始还有<span id="countdown"></span>天</h3>
+            <h1>欢迎来到MOL！</h1>
+            <h3>距离第二届MOL开始还有<span id="countdown"></span>天</h3>
             <p>比赛时间：2024/7/8-7/14</p>
         </div>
       </header>
@@ -245,14 +245,10 @@
         <h2>半咸水的logo是如何设计的？</h2>
 
         <div id="logos" class="horizontally-center">
-            <figure>
-                <img src="mol1/logo.png" alt="MOL1_logo" width="200">
-                
-            </figure>
-            <figure>
-                <img src="mol2/logo.png" alt="MOL2_logo" width="200">
-                
-            </figure>
+            <table><tr>
+                <td><img src="mol1/logo.png" alt="MOL1_logo" width="300"></td>
+                <td><img src="mol2/logo.png" alt="MOL2_logo" width="300"></td>
+            </tr></table>
         </div>
 
         <p>MOL标志以<strong>“江、山、海、日”</strong>为主要意象，不仅富有文化色彩，也阐明了“半咸水”一词的特殊意义。长江是我国最长的河流，自青藏高原奔流而下，直至入海。而我们所来自的土地，正是长江下游靠近入海口处、淡水与咸水<strong>交汇之地</strong>。标志外侧的蓝色“走之底”形象，既象征着<strong>长江</strong>，同时也传递了独特的<strong>中国汉字文化</strong>，更可以看作是“Linguistics”语言学一词首字母“L”的变形。四个渐变绿色多边形象征着“山”——保加利亚<strong>班斯科的绵延山峦</strong>，是首届MOL的组织者与创始人们永远的回忆。中间的渐变橙黄色圆形既象征着“日”，带给人<strong>“日出海上”</strong>的壮阔之感，也与两旁的绿色条带相连构成了<strong>“金牌”</strong>的美好祝愿，为每一位语奥人真诚助力。</p>
