--- a/logo_design.html
+++ b/logo_design.html
@@ -237,7 +237,7 @@
     <header class="vertically-center">
         <div class=" vertically-center" id="lead">
             <h1>欢迎来到MOL！</h1>
-            <h3>距离第二届MOL开始还有<span id="countdown"></span>天</h3>
+            <h3>距离MOL2开始还有<span id="countdown"></span>天</h3>
             <p>比赛时间：2024/7/8-7/14</p>
         </div>
       </header>
@@ -246,8 +246,8 @@
 
         <div id="logos" class="horizontally-center">
             <table><tr>
-                <td><img src="mol1/logo.png" alt="MOL1_logo" width="300"></td>
-                <td><img src="mol2/logo.png" alt="MOL2_logo" width="300"></td>
+                <td><img src="mol1/logo.png" alt="MOL1_logo" width="500"></td>
+                <td><img src="mol2/logo.png" alt="MOL2_logo" width="500"></td>
             </tr></table>
         </div>
 
