--- a/mol2/index.html
+++ b/mol2/index.html
@@ -329,7 +329,8 @@
             <div>
                 <h3>“半咸水”是什么？</h3>
                 <p>“半咸水”是出现在<strong>IOL2023团队题</strong>“Murrinh-Patha语”中的一个词，在该语言中为<strong>"Mirturl"</strong>，给队员们留下了深刻的印象。“半咸水”还象征着我们来自的土地：<strong>长江下游入海口</strong>，淡水与咸水交汇之地。这个词汇就像妙趣横生的语言一样，传递着一群人的历史与文化，表达着一群人的思想与生命。 </p>
-            </div>
+            	<p><a href="../logo_design.html">看看我们的Logo设计</a></p>
+	    </div>
             <div>
                 <h3>MOL的题目从何而来？</h3>
                 <p>MOL的题目全部由IOL<strong>国家队员</strong>们<strong>自主命题</strong>，和IOLC等主流比赛的命题风格将不尽相同，力图更加<strong>有趣</strong>、更加<strong>新颖</strong>、更能传播弘扬语奥的<strong>独特文化</strong>。我们衷心希望能给参赛的各位选手带来更特别的参赛体验。 </p>
