--- a/mol1/stat/stat.html
+++ b/mol1/stat/stat.html
@@ -227,13 +227,28 @@
                 <td><img src="T1.png" alt="第一题" width="400"></td>
                 <td><img src="T2.png" alt="第二题" width="400"></td>
                 <td><img src="T3.png" alt="第三题" width="400"></td>
-            </tr><tr>
+             </tr>
+             <tr>
+                <td style="text-align:center">第一题 声律启蒙</td>
+                <td style="text-align:center">第二题 天诺语</td>
+                <td style="text-align:center">第三题 凯特语</td>
+             </tr>
+             <tr>
                 <td><img src="T4.png" alt="第四题" width="400"></td>
                 <td><img src="T5.png" alt="第五题" width="400"></td>
                 <td><img src="Total.png" alt="总分" width="400"></td>
 
-            </tr></table>
+             </tr>
+             <tr>
+                <td style="text-align:center">第四题 印地语</td>
+                <td style="text-align:center">第五题 穆鲁伊维托托语</td>
+                <td style="text-align:center">总分</td>
+             </tr>
+            </table>
         </div>
+
+        <p><a href="index.html">返回MOL</a></p>
+
         <footer>
         半咸水QwQ 关注MOL喵<br>
         微信公众号：MOL半咸水语言学公开赛<br>
