--- a/mol1/index.html
+++ b/mol1/index.html
@@ -284,6 +284,8 @@
             </table>
             <p><strong><em>*本题不设置最佳解题奖</em></strong></p>
 
+	    <p><a href="stat/stat.pdf" target="_blank">查看统计数据</a></p>
+	    
             <h3>奖项设置</h3>
             <p>MOL收到了两笔匿名捐款，共计370元，非常感谢二位对于MOL的赞助！</p>
             <p>其中，360元作为奖金发放给表现优异的选手，以资鼓励，奖金细则与颁发情况如下：</p>
