--- a/mol1/stat/stat.html
+++ b/mol1/stat/stat.html
@@ -247,7 +247,7 @@
             </table>
         </div>
 
-        <p><a href="index.html">返回MOL</a></p>
+        <p><a href="./index.html">返回MOL</a></p>
 
         <footer>
         半咸水QwQ 关注MOL喵<br>
