--- a/mol1/index.html
+++ b/mol1/index.html
@@ -284,7 +284,7 @@
             </table>
             <p><strong><em>*本题不设置最佳解题奖</em></strong></p>
 
-	    <p><a href="stat/stat.pdf" target="_blank">查看统计数据</a></p>
+	    <p><a href="stat/stat.html" target="_blank">查看详细统计数据</a></p>
 	    
             <h3>奖项设置</h3>
             <p>MOL收到了两笔匿名捐款，共计370元，非常感谢二位对于MOL的赞助！</p>
