--- a/mol1/stat/stat.html
+++ b/mol1/stat/stat.html
@@ -236,7 +236,7 @@
              <tr>
                 <td><img src="T4.png" alt="第四题" width="400"></td>
                 <td><img src="T5.png" alt="第五题" width="400"></td>
-                <td><img src="Total.png" alt="总分" width="400"></td>
+                <td><img src="Total_new.png" alt="总分" width="400"></td>
 
              </tr>
              <tr>
