--- a/mol2/index.html
+++ b/mol2/index.html
@@ -301,7 +301,7 @@
         </div>
         <h2>第二届MOL还有……<strong>团队赛！</strong></h2>
         <div id="team-intro">
-            <p>第二届MOL将更加贴近IOL的赛程设置，加入团队赛！</p>
+            <p>第二届MOL更加贴近IOL的赛程设置，加入了团队赛！</p>
             <p>或许大家对于团队赛可能还不甚了解，也难免会产生一系列忧虑和好奇：我想和同学/朋友组队，应该如何登记？队员受到时间/空间限制无法在线下共同解题，应该如何在线上合作解题？我身边没有朋友参加MOL，在哪里可以找到队友？我是社恐，不敢主动找人组队怎么办？我真的不能一个人单刷团队题吗？团队赛和个人赛有什么区别，我在哪里可以找到用来练习的团队题？……</p>
             <p>在这里，我们会对大家可能关心的主要问题一一作出解答。希望这能够帮助大家更好地理解团队赛的赛程设置，找到心仪的队友，发挥出最好的竞技水平~</p>
         </div>
@@ -380,14 +380,14 @@
             </div>
             <div>
                 <h3>MOL的题目从何而来？</h3>
-                <p>MOL的题目全部由IOL2023<strong>国家队员</strong>们<strong>自主命题</strong>，和IOLC等主流比赛的命题风格将不尽相同，力图更加<strong>有趣</strong>、更加<strong>新颖</strong>、更能传播弘扬语奥的<strong>独特文化</strong>。我们衷心希望能给参赛的各位选手带来更特别的参赛体验。 </p>
+                <p>MOL的题目全部由IOL<strong>国家队员</strong>们<strong>自主命题</strong>，和IOLC等主流比赛的命题风格将不尽相同，力图更加<strong>有趣</strong>、更加<strong>新颖</strong>、更能传播弘扬语奥的<strong>独特文化</strong>。我们衷心希望能给参赛的各位选手带来更特别的参赛体验。 </p>
             </div>
         </div>
         
         <h2>MOL如何举办？ </h2>
         <div id="contest-content">
             <div>
-                <p>第二届MOL预计于2024年<strong>7月8日至14日</strong>在线上举行。届时，本网站将会以<strong>pdf格式公布题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，个人赛大约在6个小时左右，团队赛大约在4个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
+                <p>第二届MOL正于2024年<strong>7月8日至14日</strong>在线上举行。本网站已经以<strong>pdf格式公布了题目</strong>。选手可以使用<strong>邮箱拍照或扫描</strong>提交答卷。我们的题目推荐用时与IOL相同，个人赛大约在6个小时左右，团队赛大约在4个小时左右。尽管如此，所有提交入口均会开启一周，以给予选手充分的时间完成比赛。</p>
                 <p>提交截止一段时间后，MOL官方会将批改完毕的卷子<strong>以邮箱的方式</strong>发给各位选手，并在官网上公布<strong>答案及解析</strong>。成绩靠前的选手的分数也将会在官网上公布。我们将颁发个人赛、团队赛与总分三种奖项，并发布激励性质的奖金。</p>
             </div>
             <div id="qr-code" class="horizontally-center">
