--- a/mol2/index.html
+++ b/mol2/index.html
@@ -282,6 +282,12 @@
                 <p>*团队赛每组上传一份答案即可</p>
            </div>
         </div>
+
+	<h2>勘误/提示</h2>
+	<div id="tips-content">
+		<h3>【提示】7/8 08：40</h3>
+		<p>我们现在才正式发布题目并在各大平台宣传，也是现在算作正式开赛。如果您在今天凌晨调试网页阶段下载到了题目，很可能有误，为保险起见请不要使用今早08：40前下载的试卷及材料作答。</p>
+	</div>
        
         <h2>比赛规则</h2>
         <div id="rules-content">
