--- a/mol2/index.html
+++ b/mol2/index.html
@@ -287,6 +287,8 @@
 	<div id="tips-content">
 		<h3>【提示】7/8 08：40</h3>
 		<p>我们现在才正式发布题目并在各大平台宣传，也是现在算作正式开赛。如果您在今天凌晨调试网页阶段下载到了题目，很可能有误，为保险起见请不要使用今早08：40前下载的试卷及材料作答。</p>
+		<h3>【勘误】7/8 21：04</h3>
+		<p>团队赛（d-2）项不仅需要翻译问句，也需要将答句翻译成中文，否则可能影响其他部分的作答。</p>
 	</div>
        
         <h2>比赛规则</h2>
