--- a/mol2/index.html
+++ b/mol2/index.html
@@ -290,7 +290,7 @@
 		<h3>【勘误】7/8 21：04</h3>
 		<p>团队赛（d-2）项不仅需要翻译问句，也需要将答句翻译成中文，否则可能影响其他部分的作答。</p>
 		<h3>【勘误】7/8 22：18</h3>
-		<p>团队赛（a）项的句子“R”为多余的一个汉语句子，无需对其进行配对。</p>
+		<p>团队赛（a）项的句子“N”和“R”为多余的两个汉语句子，没有对应翻译，无需对其进行配对。</p>
 	</div>
        
         <h2>比赛规则</h2>
