--- a/mol2/index.html
+++ b/mol2/index.html
@@ -291,6 +291,8 @@
 		<p>团队赛（d-2）项不仅需要翻译问句，也需要将答句翻译成中文，否则可能影响其他部分的作答。</p>
 		<h3>【勘误】7/8 22：18</h3>
 		<p>团队赛（a）项的句子“N”和“R”为多余的两个汉语句子，没有对应翻译，无需对其进行配对。</p>
+		<h3>【提示】7/9 22：42</h3>
+		<p>个人赛第四题需要绘制人物动作的部分，您也可以考虑以向组委会提交自己做动作的视频代替！（手动狗头</p>
 	</div>
        
         <h2>比赛规则</h2>
