--- a/mol2/index.html
+++ b/mol2/index.html
@@ -293,6 +293,8 @@
 		<p>团队赛（a）项的句子“N”和“R”为多余的两个汉语句子，没有对应翻译，无需对其进行配对。</p>
 		<h3>【提示】7/9 22：42</h3>
 		<p>个人赛第四题需要绘制人物动作的部分，您也可以考虑以向组委会提交自己做动作的视频代替！（手动狗头</p>
+		<h3>【勘误】7/11 19：25</h3>
+		<p>个人赛第三题17问句子的第一个词的元音不是a而是ɑ。个人赛第四题注释中的“女子竞技体操更注重而”删去“而”。团队赛后几页的页眉应为“团队赛题目”。这些勘误均不影响解题。</p>
 	</div>
        
         <h2>比赛规则</h2>
