--- a/mol2/index.html
+++ b/mol2/index.html
@@ -235,11 +235,20 @@
             grid-template-columns:1fr 1fr 1fr;
             column-gap:30px;
         }
-        #contest-content{
+        #test-content{
             display:flex;
         }
-        #contest-content div{
-            width:45vw;
+        #test-content div{
+            width:25vw;
+            margin-right:5vw;
+        }
+        #test-content div img{
+            width:150px;
+            float:right;
+            max-width:20vw;
+        }
+        #contest-content{
+            display:flex;
         }
         #ranking{
             margin-top:-10px;
@@ -270,7 +279,7 @@
       </header>
       <main>
         <h2>试卷/提交入口</h2>
-        <div id="contest-content">
+        <div id="test-content">
             <div>
                 <h3>试题</h3>
                 <p><a href="./第二届MOL个人赛题目.pdf" target="_blank">个人赛试卷</a> | <a href="./第二届MOL团队赛题目.pdf" target="_blank">团队赛试卷</a></p>
@@ -279,7 +288,13 @@
            <div>
                 <h3>提交入口</h3>
                 <p>请将每道题的答案分别写在一张A4纸上，拍照或扫描答案，提交至邮箱mirturlol@163.com</p>
-                <p>*团队赛每组上传一份答案即可</p>
+           </div>
+           <div>
+                <h3>赛后问卷</h3>
+                <img src="./wjx-qr.jpg">
+                <p>问卷星二维码 <strong>►</strong></p>
+                <p><a href="https://www.wjx.cn/vm/hwSZYY7.aspx#" target="_blank">问卷星链接</a></p>
+                
            </div>
         </div>
 
