--- a/rules-guideline.html
+++ b/rules-guideline.html
@@ -91,14 +91,15 @@
         <li>写出句子结构和语序（如S+V+O、S+O+V）
         <li>写出名词的变格，特别是代词的变格（较复杂的可以画表格），如果有形容词的变格等也可以写出
         <li>写出动词的变位，特别是因人称或时态的变位（如英语中第三人称单数+s、一般过去时+ed等）
+	<li>写出其他各种奇怪词类的使用方式，比如副词、数词、量词、指示词等
         <li>写出音变规则（如辅音浊化、颚化、送气化；元音和谐、高化、圆唇化；变调；重复；省略等）
         <li>如果有不同句子结构的分类（如S+V结构与S+V+O结构的语法不同），则分别书写规则
         </ol>
         <h2>音系题</h2>
         <ol>
         <li>写出音变规则（同上）
-        <li>特别注意音变规则之间的顺序，确保排列正确
-        <li>如果音变与词义有关，分类讨论
+        <li>特别注意音变规则之间的顺序和关系，确保排列正确
+        <li>如果音变与词义或词性有关，分类讨论
 	<li>形态题的规则与音系题类似
         </ol>
 
