--- a/mol2/index.html
+++ b/mol2/index.html
@@ -280,14 +280,15 @@
       <main>
         <h2>MOL2圆满收工！</h2>
         <p>MOL组委会正在全力批卷。我们稍后会通过邮件发送各位选手的成绩，请多多留意邮箱吧！</p>
-        <p>答案、解析、分数统计也都在路上了，之后会在本网站与公众号同步公布，也请多多关注啦QwQ</p>
+        <p>答案与解析已经发布了！分数统计也在路上了，之后会在本网站与公众号同步公布，也请多多关注啦QwQ</p>
         <p>最后，感谢各位的参与与支持！MOL would be impossible without you ❤</p>
-        <h2>试卷/提交入口</h2>
+        <h2>试卷/答案</h2>
         <div id="test-content">
             <div>
                 <h3>试题</h3>
                 <p><a href="./第二届MOL个人赛题目.pdf" target="_blank">个人赛试卷</a> | <a href="./第二届MOL团队赛题目.pdf" target="_blank">团队赛试卷</a></p>
                 <p><a href="./纳瓦特尔语录音.zip" target="_blank">团队赛音频</a>（重要！务必下载）</p>
+                <p>答案：<a href="./第二届MOL个人赛答案.pdf" target="_blank">个人赛答案</a> | <a href="./第二届MOL团队赛答案.pdf" target="_blank">团队赛答案</a></p>
             </div>
            <div>
                 <h3>赛后问卷</h3>
@@ -300,16 +301,8 @@
 
 	<h2>勘误/提示</h2>
 	<div id="tips-content">
-		<h3>【提示】7/8 08：40</h3>
-		<p>我们现在才正式发布题目并在各大平台宣传，也是现在算作正式开赛。如果您在今天凌晨调试网页阶段下载到了题目，很可能有误，为保险起见请不要使用今早08：40前下载的试卷及材料作答。</p>
-		<h3>【勘误】7/8 21：04</h3>
-		<p>团队赛（d-2）项不仅需要翻译问句，也需要将答句翻译成中文，否则可能影响其他部分的作答。</p>
-		<h3>【勘误】7/8 22：18</h3>
-		<p>团队赛（a）项的句子“N”和“R”为多余的两个汉语句子，没有对应翻译，无需对其进行配对。</p>
-		<h3>【提示】7/9 22：42</h3>
-		<p>个人赛第四题需要绘制人物动作的部分，您也可以考虑以向组委会提交自己做动作的视频代替！（手动狗头</p>
-		<h3>【勘误】7/11 19：25</h3>
-		<p>个人赛第三题17问句子的第一个词的元音不是a而是ɑ。个人赛第四题注释中的“女子竞技体操更注重而”删去“而”。团队赛后几页的页眉应为“团队赛题目”。这些勘误均不影响解题。</p>
+		<h3>【提示】7/15 11：49</h3>
+		<p>我们已经在新的题目文档中修正了之前的所有勘误与提示。</p>
 	</div>
        
         <h2>比赛规则</h2>
