--- a/mol2/index.html
+++ b/mol2/index.html
@@ -278,8 +278,8 @@
         </div>
       </header>
       <main>
-        <h2>MOL2圆满收工！</h2>
-        <p>MOL组委会正在全力批卷。我们稍后会通过邮件发送各位选手的成绩，请多多留意邮箱吧！</p>
+        <h2>MOL2圆满收官！</h2>
+        <p>MOL组委会批卷工作已经结束。我们已通过邮件发送各位选手的成绩，请多多留意邮箱吧！</p>
         <p>答案与解析已经发布了！分数统计也在路上了，之后会在本网站与公众号同步公布，也请多多关注啦QwQ</p>
         <p>最后，感谢各位的参与与支持！MOL would be impossible without you ❤</p>
         <h2>试卷/答案</h2>
@@ -288,10 +288,11 @@
                 <h3>试题</h3>
                 <p><a href="./第二届MOL个人赛题目.pdf" target="_blank">个人赛试卷</a> | <a href="./第二届MOL团队赛题目.pdf" target="_blank">团队赛试卷</a></p>
                 <p><a href="./纳瓦特尔语录音.zip" target="_blank">团队赛音频</a>（重要！务必下载）</p>
-                <p>答案：<a href="./第二届MOL个人赛答案.pdf" target="_blank">个人赛答案</a> | <a href="./第二届MOL团队赛答案.pdf" target="_blank">团队赛答案</a></p>
+		<h3>答案</h3>
+                <p><a href="./第二届MOL个人赛答案.pdf" target="_blank">个人赛答案</a> | <a href="./第二届MOL团队赛答案.pdf" target="_blank">团队赛答案</a></p>
             </div>
            <div>
-                <h3>赛后问卷</h3>
+                <h3>赛后问卷（调查已结束，统计情况我们后续会更新在官网！）</h3>
                 <img src="./wjx-qr.jpg">
                 <p>问卷星二维码 <strong>►</strong></p>
                 <p><a href="https://www.wjx.cn/vm/hwSZYY7.aspx#" target="_blank">问卷星链接</a></p>
@@ -302,7 +303,7 @@
 	<h2>勘误/提示</h2>
 	<div id="tips-content">
 		<h3>【提示】7/15 11：49</h3>
-		<p>我们已经在新的题目文档中修正了之前的所有勘误与提示。</p>
+		<p>我们已经在新的题目文档中修正了之前的所有勘误与提示。另外，MOL1的所有勘误与提示也已一并修正。</p>
 	</div>
        
         <h2>比赛规则</h2>
@@ -349,7 +350,7 @@
             <div id="qr-code" class="horizontally-center">
                 <figure>
                     <img src="../group-qr.jpg" alt="Wechat Group QR Code" width="200">
-                    <figcaption>微信交流群</figcaption>
+                    <figcaption>微信交流群（群人数已大于200，目前二维码暂不可用，请关注公众号或官网留意后续通知）</figcaption>
                 </figure>
                 <figure>
                     <img src="../account-qr.png" alt="Subscription Account" width="200">
