--- a/mol2/index.html
+++ b/mol2/index.html
@@ -31,12 +31,12 @@
         display:none;
     }
     a,strong{
-        color:#faaf89;
+        color:#f99e71;
         font-weight:500;
         transition:color 0.4s;
     }
     a:hover{
-        color:#ffa38d;
+        color:#ff8e74;
     }
     body {
 		margin:-0.2px;
@@ -50,7 +50,7 @@
         margin-top:30px;
         border-top:2px solid black;
         padding-top:30px;
-        color:#ffa38d;
+        color:#ff8e74;
         text-align:center;
         font-weight:bold;
         font-style:italic;
@@ -86,7 +86,7 @@
     }
     main h3{
         font-weight:400;
-        color:#ffa38d;
+        color:#ff8e74;
     }
     nav{
         display:flex;
@@ -122,7 +122,7 @@
         text-justify: inter-word;
     }
     summary{
-        color:#ffa38d;
+        color:#ff8e74;
     }
     details{
         padding-left:2em;
@@ -154,7 +154,7 @@
         width:85vw;
         max-width:700px;
         border-spacing:0;
-        border:#ffa38d 2px solid;
+        border:#ff8e74 2px solid;
     }
     #results-table th{
         text-align:left;
@@ -172,7 +172,7 @@
         background-color:#ffdfdf;
     }
     #results-table tr:first-child{
-        background-color:#ffa38d;
+        background-color:#f99e71;
         color:white;
     }
     #solution-content ol li{
@@ -183,7 +183,7 @@
         text-decoration: none;
     }
     .question p:first-child{
-        color:#ffa38d;
+        color:#ff8e74;
     }
     @media(min-width:768px){
         .large-only{
@@ -200,7 +200,7 @@
             width:410px;
             margin-left:20px;
             text-align:center;
-            color:#faaf89;
+            color:#f99e71;
         }
     }
     @media (min-width:996px){
@@ -289,9 +289,9 @@
             </p>
             <p>恭喜获奖的选手！</p>
             <h3>总分</h3>
-            <p>MOL2以个人*80%+团队*20%的方式计算了总分奖（仅有两项比赛都参与的选手才可获得），共计32人获得。</p>
+            <p>MOL2以<strong>个人*80%+团队*20%</strong>的方式计算了总分奖（<strong>仅有两项比赛都参与的选手才可获得</strong>），共计32人获得。</p>
             <p>在这32名选手中，个人赛均分为<strong>51.86</strong>分，团队赛均分为<strong>51.29</strong>分，总分均分为<strong>51.75</strong>分。综合考量分数分布后，我们划定了金奖5人（分数线为76.46分）、银奖11人（分数线为56.3分）、铜奖16人。对于这些选手，我们为团队赛金奖颁发每人10元，为总分金奖再颁发每人10元。</p>
-            <p>个人赛最高分qramecat乔奕铭选手以领先优势毫无悬念地获总分第一名（85.9分）！总分前五分别为：qramecat乔奕铭、黄宇潇、Brightly_、ItzSetrods、Sukilin。相关信息我们已经与奖状一同发还大家的邮箱，请于近几日随时查收哦！</p>
+            <p>个人赛最高分qramecat乔奕铭选手以领先优势毫无悬念地获总分第一名（85.9分）！总分前五分别为：<strong>qramecat乔奕铭、黄宇潇、Brightly_、ItzSetrods、Sukilin</strong>。相关信息我们已经与奖状一同发还大家的邮箱，请于近几日随时查收哦！</p>
 
             <h3>个人赛</h3>
             <table id="results-table">
@@ -337,7 +337,7 @@
                     <td>18.5</td>
                     <td>sevenkplus</td>
                 </tr>
-            </table>
+            </table></br>
             <a href="#">查看详细统计数据</a>
 
             <p>个人赛平均分为<strong>46.89</strong>分。综合考量分数分布后，我们划定了金奖6人（分数线为76.5分）、银奖15人（分数线为50分）、铜奖21人。金奖奖金为每人10元，最佳解题奖奖金为每题20元。</p>
@@ -346,8 +346,8 @@
             <h3>团队赛</h3>
             <p>本次比赛中，共有<strong>20支队伍</strong>完成了团队赛，分数情况如下：</p>
             <p>团队赛平均分为<strong>48.63分</strong>。我们划定了金奖3组（分数线为87.5分）、银奖8组（分数线为51分）、铜奖9组。团队赛奖金不以团队为单位发布。</p>
-            <p>我们在赛前根本没预料到大家的团队分数能达到这么高，更不敢想象第一名会来到97.5分！在本次比赛中，“我打语竞，真的假的？”以97.5分获得冠军，“白兔保护队”以97分获得亚军，“simplicissimus队”以87.5分获得季军。这三支金奖队伍的实力实在是太不可思议了！组委会对他们敏锐的观察力、出色的团队协作与坚持不懈的努力感到由衷敬佩！</p>
-            <p>无论分数如何，团队赛都是一个团队合作的过程，因此需要的不只有解题，更重要的是相处、磨合、互相信任、互相配合、互相支持与理解……相信无论是哪一支队伍，都一定能在完成MOL2团队赛的过程中收获到团队合作的宝贵经验，乃至结识珍贵的友谊！语奥一线牵，相逢即是缘，希望大家喜欢我们的团队赛，也在以后其他团队活动中更上一层楼！</p>
+            <p>我们在赛前根本没预料到大家的团队分数能达到这么高，更不敢想象第一名会来到<strong>97.5分</strong>！在本次比赛中，<strong>“我打语竞，真的假的？”</strong>以97.5分获得冠军，<strong>“白兔保护队”</strong>以97分获得亚军，<strong>“simplicissimus队”</strong>以87.5分获得季军。这三支金奖队伍的实力实在是太不可思议了！组委会对他们敏锐的观察力、出色的团队协作与坚持不懈的努力感到由衷敬佩！</p>
+            <p>无论分数如何，团队赛都是一个团队合作的过程，因此需要的不只有解题，更重要的是相处、磨合、互相信任、互相配合、互相支持与理解……相信无论是哪一支队伍，都一定能在完成MOL2团队赛的过程中收获到团队合作的宝贵经验，乃至结识珍贵的友谊！<strong>语奥一线牵，相逢即是缘，</strong>希望大家喜欢我们的团队赛，也在以后其他团队活动中更上一层楼！</p>
 
 
         <h2>试卷/解析</h2>
@@ -361,11 +361,11 @@
            <div id="solution-content">
                 <h3>解析</h3>
                 <ol>
-                    <li>则天文字/IDS</li>
-                    <li>努哈尔克语</li>
-                    <li>葛颇彝语</li>
-                    <li>竞技体操</li>
-                    <li>莱拉语 <a href="https://www.bilibili.com/video/BV1mFYwe4EXu" target="blank">解析</a></li>
+                    <li>则天文字/IDS：<a href="best-solution/1.jpg" target="_blank">最佳解</a></li>
+                    <li>努哈尔克语：<a href="best-solution/2.jpg" target="_blank">最佳解</a></li>
+                    <li>葛颇彝语：<a href="best-solution/3.jpg" target="_blank">最佳解</a></li>
+                    <li>竞技体操：<a href="best-solution/4.jpg" target="_blank">最佳解</a></li>
+                    <li>莱拉语：<a href="best-solution/1.jpg" target="_blank">最佳解</a> · <a href="https://www.bilibili.com/video/BV1mFYwe4EXu" target="blank">解析视频</a></li>
                 </ol>
            </div>
         </div>
